--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <div class="link-grid">
             <a href="https://line.me/R/ti/p/@604gpqef" target="_blank" class="btn-link btn-line">
-                <i class="fab fa-line mr-2"></i> 加入官方好友 (免費諮詢)
+                <i class="fab fa-line mr-2"></i> 加入官方好友 (預約付費諮詢)
             </a>
             <a href="https://www.facebook.com/062582589a/" target="_blank" class="btn-link btn-fb">
                 <i class="fab fa-facebook mr-1"></i> FB 粉專
